--- a/requirements.txt
+++ b/requirements.txt
@@ -148,7 +148,7 @@ pyrsistent==0.17.3
 python-dateutil==2.8.1
 pytz==2021.1
 PyWavelets==1.2.0
-pywin32==300
+#pywin32==300
 pywinpty==1.0.1
 PyYAML==6.0
 pyzmq==22.0.3
