--- a/requirements.txt
+++ b/requirements.txt
@@ -1,213 +1,9 @@
-absl-py==0.13.0
-amqp==5.0.6
-apiclient==1.0.4
-argon2-cffi==20.1.0
-asgiref==3.5.0
-astunparse==1.6.3
-async-generator==1.10
-attrs==20.3.0
-backcall==0.2.0
-bcrypt==3.2.0
-beautifulsoup4==4.9.3
-billiard==3.6.4.0
-bleach==3.3.0
-blinker==1.4
-blis==0.7.5
-cachetools==4.2.2
-catalogue==2.0.6
-celery==5.1.2
-certifi==2019.6.16
-cffi==1.14.5
-chardet==3.0.4
-charset-normalizer==2.0.7
-chart-studio==1.1.0
-clang==5.0
-click==7.1.2
-click-didyoumean==0.0.3
-click-plugins==1.1.1
-click-repl==0.2.0
-cmake==3.21.3
-colab==1.13.5
-colorama==0.4.4
-colorlover==0.3.0
-config==0.5.0.post0
-cssselect==1.1.0
-cufflinks==0.17.3
-cycler==0.10.0
-cymem==2.0.6
-decorator==5.0.7
-defusedxml==0.7.1
-diazo==1.4.0
-Django==4.0.2
-django-haystack==3.0
-django-hitcounter==0.1.1
-django-revproxy==0.10.0
-django-taggit==1.4.0
-dlib==19.22.1
-dnspython==2.2.0
-email-validator==1.1.3
-entrypoints==0.3
-etiquetando==0.1
 Flask==2.0.2
-Flask-Bcrypt==0.7.1
-Flask-Login==0.5.0
-Flask-Mail==0.9.1
-Flask-SQLAlchemy==2.5.1
-Flask-WTF==1.0.0
-flatbuffers==1.12
-future==0.18.2
-gast==0.4.0
-google==3.0.0
-google-api-core==1.31.0
-google-api-python-client==2.13.0
-google-auth==1.32.1
-google-auth-httplib2==0.1.0
-google-auth-oauthlib==0.4.6
-google-cloud==0.34.0
-google-pasta==0.2.0
-googleapis-common-protos==1.53.0
-graphviz==0.17
-greenlet==1.1.2
-grpcio==1.40.0
-gunicorn==20.1.0
-h5py==3.1.0
-html2text==2020.1.16
-htmlmin==0.1.12
-httplib2==0.19.1
-idna==2.8
-image==1.5.33
-ImageHash==4.2.1
-imutils==0.5.4
-ipykernel==5.5.3
-ipython==7.23.0
-ipython-genutils==0.2.0
-ipywidgets==7.6.3
+Flask_Bcrypt==0.7.1
+Flask_Login==0.5.0
+Flask_Mail==0.9.1
+Flask_SQLAlchemy==2.5.1
+Flask_WTF==1.0.0
 itsdangerous==2.0.1
-jedi==0.18.0
-Jinja2==3.0.3
-joblib==1.0.1
-jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==6.1.12
-jupyter-console==6.4.0
-jupyter-core==4.7.1
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.0
-keras==2.6.0
-Keras-Preprocessing==1.1.2
-kiwisolver==1.3.1
-kombu==5.1.0
-langcodes==3.3.0
-lxml==4.6.3
-Markdown==3.3.4
-MarkupSafe==2.0.1
-matplotlib==3.4.1
-matplotlib-inline==0.1.2
-missingno==0.5.0
-mistune==0.8.4
-multimethod==1.6
-murmurhash==1.0.6
-nbclient==0.5.3
-nbconvert==6.0.7
-nbformat==5.1.3
-nest-asyncio==1.5.1
-networkx==2.6.3
-nltk==3.6.2
-notebook==6.3.0
-numpy==1.19.5
-oauthlib==3.1.1
-opencv-python==4.5.3.56
-opt-einsum==3.3.0
-packaging==20.9
-pandas==1.2.4
-pandas-datareader==0.10.0
-pandas-profiling==3.1.0
-pandocfilters==1.4.3
-parso==0.8.2
-pathy==0.6.1
-phik==0.12.0
-pickleshare==0.7.5
-Pillow==8.2.0
-plotly==4.14.3
-praw==6.3.1
-prawcore==1.0.1
-preshed==3.0.6
-prettytable==2.1.0
-prometheus-client==0.10.1
-prompt-toolkit==3.0.18
-protobuf==3.17.3
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.20
-pydantic==1.8.2
-pydot==1.4.2
-Pygments==2.8.1
-pyparsing==2.4.7
-pypiwin32==223
-pyrsistent==0.17.3
-python-dateutil==2.8.1
-pytz==2021.1
-PyWavelets==1.2.0
-#pywin32==300
-pywinpty==1.0.1
-PyYAML==6.0
-pyzmq==22.0.3
-qtconsole==5.0.3
-QtPy==1.9.0
-redis==3.5.3
-regex==2021.8.28
-repoze.lru==0.7
-requests==2.26.0
-requests-oauthlib==1.3.0
-retrying==1.3.3
-rsa==4.7.2
-scikit-learn==0.24.1
-scikit-surprise==1.1.1
-scipy==1.6.2
-seaborn==0.11.1
-Send2Trash==1.5.0
-six==1.15.0
-sklearn==0.0
-smart-open==5.2.1
-soupsieve==2.2.1
-spacy==3.2.0
-spacy-legacy==3.0.8
-spacy-loggers==1.0.1
-SQLAlchemy==1.4.31
-sqlparse==0.4.2
-srsly==2.4.2
-stemming==1.0.1
-surprise==0.1
-tangled-up-in-unicode==0.1.0
-tensorboard==2.6.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.0
-tensorflow==2.6.0
-tensorflow-estimator==2.6.0
-termcolor==1.1.0
-terminado==0.9.4
-testpath==0.4.4
-thinc==8.0.13
-threadpoolctl==2.1.0
-tornado==6.1
-tqdm==4.62.2
-traitlets==5.0.5
-typer==0.4.0
-typing-extensions==3.7.4.3
-tzdata==2021.5
-update-checker==0.16
-uritemplate==3.0.1
-urllib3==1.25.3
-vine==5.0.0
-visions==0.7.4
-wasabi==0.9.0
-wcwidth==0.2.5
-webencodings==0.5.1
-websocket-client==0.56.0
-Werkzeug==2.0.1
-Whoosh==2.7.4
-widgetsnbextension==3.5.1
-wikipedia==1.4.0
-wordcloud==1.8.1
-wrapt==1.12.1
+Pillow==9.0.1
 WTForms==3.0.1
