--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,11 @@
-bcrypt==3.1.4
-blinker==1.4
-certifi==2016.2.28
-cffi==1.11.5
-click==6.7
-Flask==1.0
-Flask-Bcrypt==0.7.1
-Flask-Login==0.4.1
-Flask-Mail==0.9.1
-Flask-SQLAlchemy==2.3.2
-Flask-WTF==0.14.2
-itsdangerous==0.24
-Jinja2==2.10
-Pillow==5.3.0
-pycparser==2.18
-six==1.11.0
-SQLAlchemy==1.2.7
-Werkzeug==0.14.1
-WTForms==2.1
+Flask==2.0.2
+Flask_Bcrypt==0.7.1
+Flask_Login==0.5.0
+Flask_Mail==0.9.1
+Flask_SQLAlchemy==2.5.1
+Flask_WTF==1.0.0
+itsdangerous==2.0.1
+Pillow==9.0.1
+email_validator==2.2.0
+gunicorn==19.9.0
+WTForms==3.0.1
